added jovicich 2013 citation for reviewer 3 major 2

--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -554,3 +554,13 @@
   year={2009},
   publisher={Elsevier}
 }
+
+@article{jovicich2013brain,
+  title={Brain morphometry reproducibility in multi-center 3T MRI studies: a comparison of cross-sectional and longitudinal segmentations},
+  author={Jovicich, Jorge and Marizzoni, Moira and Sala-Llonch, Roser and Bosch, Beatriz and Bartr{\'e}s-Faz, David and Arnold, Jennifer and Benninghoff, Jens and Wiltfang, Jens and Roccatagliata, Luca and Nobili, Flavio and others},
+  journal={Neuroimage},
+  volume={83},
+  pages={472--484},
+  year={2013},
+  publisher={Elsevier}
+}
