--- a/Even_though_this_stu.tex
+++ b/Even_though_this_stu.tex
@@ -1,1 +1,1 @@
-Even though this study calculated scaling factors from healthy controls, we showed that scaling factors derived from a multiple sclerosis population were very similar or identical to those derived from healthy controls. This part of the study was limited in that we only scanned patients at two scanners, while the healthy controls were scanned at 20. However, the similarity between scaling factors for the subcortical gray matter, cortical gray matter and white matter volumes between the MS and HC populations suggests that this method could be generalized to any disease population.
+Even though this study calculated scaling factors from healthy controls, we showed that scaling factors derived from an MS population were very similar or identical to those derived from healthy controls. The largest difference in scaling factors between HC versus MS patients was for white matter volume, where $a_{MS} = .967$ and $a_{HC} = .975$. A two-sample T test between the scaling factors resulted in a p-value of $0.88$, showing that we could not detect a significant difference between scaling factors between HC and MS. This part of the study was limited in that we only scanned patients at two scanners, while the healthy controls were scanned at 20. However, the similarity between scaling factors for the subcortical gray matter, cortical gray matter and white matter volumes between the MS and HC populations suggests that this method could be generalized to any disease population, given careful editing of volumes on the disease population.
