Reviewer 1 Major 2 citation

--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -564,3 +564,13 @@
   year={2013},
   publisher={Elsevier}
 }
+
+@article{streitburger2014impact,
+  title={Impact of image acquisition on voxel-based-morphometry investigations of age-related structural brain changes},
+  author={Streitb{\"u}rger, Daniel-Paolo and Pampel, Andr{\'e} and Krueger, Gunnar and Lepsien, J{\"o}ran and Schroeter, Matthias L and Mueller, Karsten and M{\"o}ller, Harald E},
+  journal={Neuroimage},
+  volume={87},
+  pages={170--182},
+  year={2014},
+  publisher={Elsevier}
+}
