--- a/subsectionProcessing.tex
+++ b/subsectionProcessing.tex
@@ -1,2 +1,2 @@
 \subsection{Processing}
- A neuroradiologist reviewed all images to screen for major artifacts and pathology. The standard Freesurfer \cite{freesurferPaper} version 5.3.0 cross-sectional pipeline (recon-all) was run on each site's native T1-weighted protocol, using the RedHat 7 operating system. Both 1.5T and 3T scans were run with the same parameters (without using the -3T flag), meaning that the non-uniformity correction parameters were kept at the default values. All Freesurfer results were quality controlled by evaluating the cortical gray matter segmentation. Scans were excluded from the study if the cortical gray matter segmentation misclassified parts of the cortex. Scans from 10 sites had no exclusions, while 1-2 out of 24 scans were excluded from the remaining sites, removing at most 1-2 subjects from the analysis of that site. Freesurfer ROIs were averaged across hemispheres, and volume and area measurements were extracted for both the cortical and subcortical ROIs, while average thickness was extracted for the cortical ROIs only. A total of 133 Freesurfer metrics were analyzed. In this study we report on the ROIs relevant to the disease progression of MS, which include the gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (amyg), thalamus (thal), hippocampus (hipp), caudate (caud), and finally the estimated total intracranial volume (eTIV). The remaining subcortical  and cortical ROIs are reported in the Supplementary Materials.
+ A neuroradiologist reviewed all images to screen for major artifacts and pathology. The standard Freesurfer \cite{freesurferPaper} version 5.3.0 cross-sectional pipeline (recon-all) was run on each site's native T1-weighted protocol, using the RedHat 7 operating system on IEEE 754 compliment hardware. Both 1.5T and 3T scans were run with the same parameters (without using the -3T flag), meaning that the non-uniformity correction parameters were kept at the default values. All Freesurfer results were quality controlled by evaluating the cortical gray matter segmentation. Scans were excluded from the study if the cortical gray matter segmentation misclassified parts of the cortex. Scans from 10 sites had no exclusions, while 1-2 out of 24 scans were excluded from the remaining sites, removing at most 1-2 subjects from the analysis of that site. Freesurfer ROIs were averaged across hemispheres, and volume and area measurements were extracted for both the cortical and subcortical ROIs, while average thickness was extracted for the cortical ROIs only. A total of 133 Freesurfer metrics were analyzed. In this study we report on the ROIs relevant to the disease progression of MS, which include the gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (amyg), thalamus (thal), hippocampus (hipp), caudate (caud), and finally the estimated total intracranial volume (eTIV). The remaining subcortical  and cortical ROIs are reported in the Supplementary Materials.
