--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -5,7 +5,6 @@
 \toprule
 {} & 1 & 2 & 3 & 4 \\
 \midrule
-Site                  &                    &                    &                      &                      \\
 TR                    &               8.18 &               7.10 &                 2130 &                 2080 \\
 TE                    &               3.86 &               3.20 &                 2.94 &                 3.10 \\
 Strength              &               1.50 &               1.50 &                 1.50 &                 1.50 \\
@@ -20,16 +19,15 @@ Read Out Direction    &                 SI &                  0 &               
 Head coil \# channels  &                  0 &                  0 &                   20 &                   12 \\
 Model                 &           Signa LX &            Achieva &               Avanto &               Avanto \\
 OS                    &                11x &                  0 &               MRD13B &                 B17A \\
-Averages              &                  1 &                  0 &                    1 &                    1 \\
 Acq. Time (min)       &           06:24:00 &           00:00:00 &             04:58:00 &             08:56:00 \\
-3D                    &                yes &                  0 &                  yes &                  yes \\
 orientation           &                sag &                  0 &                  sag &                  sag \\
+\midrule
 cWMV                  &               0.99 &               1.00 &                 0.99 &                 0.98 \\
-Amyg L                &               0.92 &               0.90 &                 0.65 &                 0.94 \\
+Amyg L                &               0.92 &               0.90 &                 \textit{0.65} &                 0.94 \\
 Caud L                &               0.95 &               0.95 &                 0.98 &                 0.97 \\
 Hipp L                &               0.93 &               0.95 &                 0.89 &                 0.85 \\
 LV L                  &               0.99 &               1.00 &                 1.00 &                 0.86 \\
-Thal L                &               0.75 &               0.88 &                 0.50 &                 0.85 \\
+Thal L                &               0.75 &               0.88 &                 \textit{0.50} &                 0.85 \\
 Amyg R                &               0.90 &               0.90 &                 0.83 &                 0.90 \\
 Caud R                &               0.98 &               0.97 &                 0.95 &                 0.85 \\
 Hipp R                &               0.89 &               0.93 &                 0.95 &                 0.89 \\
