--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -3,7 +3,7 @@
 \centering
 \begin{tabular}{lllll}
 \toprule
-{} & 1 & 2 & 3 & 4 \\
+{} & bwh-ge-signa-fspgr & nov-ph-achieva-t1w & vdb-si-avanto-mprage & bas-si-avanto-mprage \\
 \midrule
 TR                    &               8.18 &               7.10 &                 2130 &                 2080 \\
 TE                    &               3.86 &               3.20 &                 2.94 &                 3.10 \\
@@ -21,20 +21,19 @@ Model                 &           Signa LX &            Achieva &               
 OS                    &                11x &                  0 &               MRD13B &                 B17A \\
 Acq. Time (min)       &           06:24:00 &           00:00:00 &             04:58:00 &             08:56:00 \\
 orientation           &                sag &                  0 &                  sag &                  sag \\
-\midrule
-cWMV                  &               0.99 &               1.00 &                 0.99 &                 0.98 \\
-Amyg L                &               0.92 &               0.90 &                 \textit{0.65} &                 0.94 \\
-Caud L                &               0.95 &               0.95 &                 0.98 &                 0.97 \\
-Hipp L                &               0.93 &               0.95 &                 0.89 &                 0.85 \\
-LV L                  &               0.99 &               1.00 &                 1.00 &                 0.86 \\
-Thal L                &               0.75 &               0.88 &                 \textit{0.50} &                 0.85 \\
+Amyg L                &               0.92 &               0.90 &                 0.65 &                 0.94 \\
 Amyg R                &               0.90 &               0.90 &                 0.83 &                 0.90 \\
+Caud L                &               0.95 &               0.95 &                 0.98 &                 0.97 \\
 Caud R                &               0.98 &               0.97 &                 0.95 &                 0.85 \\
-Hipp R                &               0.89 &               0.93 &                 0.95 &                 0.89 \\
-LV R                  &               1.00 &               1.00 &                 1.00 &                 0.72 \\
-Thal R                &               0.88 &               0.84 &                 0.73 &                 0.82 \\
-scGMV                 &               0.98 &               0.96 &                 0.98 &                 0.93 \\
 GMV                   &               0.96 &               0.99 &                 0.98 &                 0.98 \\
+Hipp L                &               0.93 &               0.95 &                 0.89 &                 0.85 \\
+Hipp R                &               0.89 &               0.93 &                 0.95 &                 0.89 \\
+LV L                  &               0.99 &               1.00 &                 1.00 &                 0.86 \\
+LV R                  &               1.00 &               1.00 &                 1.00 &                 0.72 \\
+Thal L                &               0.75 &               0.88 &                 0.50 &                 0.85 \\
+Thal R                &               0.88 &               0.84 &                 0.73 &                 0.82 \\
+cWMV                  &               0.99 &               1.00 &                 0.99 &                 0.98 \\
+scGMV                 &               0.98 &               0.96 &                 0.98 &                 0.93 \\
 \bottomrule
 \end{tabular}
 \caption{Top: Acquisition parameters for the first 10 out of 20 scanners. Si = Siemens, Ph = Philips, GE= General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
