--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -21,6 +21,7 @@ Model                 &           Signa LX &            Achieva &               
 OS                    &                11x &                  0 &               MRD13B &                 B17A \\
 Acq. Time (min)       &           06:24:00 &           00:00:00 &             04:58:00 &             08:56:00 \\
 orientation           &                sag &                  0 &                  sag &                  sag \\
+\midrule
 Amyg L                &               0.92 &               0.90 &                 0.65 &                 0.94 \\
 Amyg R                &               0.90 &               0.90 &                 0.83 &                 0.90 \\
 Caud L                &               0.95 &               0.95 &                 0.98 &                 0.97 \\
