--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -22,7 +22,7 @@ OS                    &                11x &                  0 &               
 Acq. Time (min)       &           06:24 &           00:00:00 &             04:58 &             08:56 \\
 orientation           &                sag &                  0 &                  sag &                  sag \\
 \midrule
-Amyg L                &               0.92 &               0.90 &                 0.65 &                 0.94 \\
+Amyg L                &               0.92 &               0.90 &                 \textit{0.65} &                 0.94 \\
 Amyg R                &               0.90 &               0.90 &                 0.83 &                 0.90 \\
 Caud L                &               0.95 &               0.95 &                 0.98 &                 0.97 \\
 Caud R                &               0.98 &               0.97 &                 0.95 &                 0.85 \\
@@ -31,7 +31,7 @@ Hipp L                &               0.93 &               0.95 &               
 Hipp R                &               0.89 &               0.93 &                 0.95 &                 0.89 \\
 LV L                  &               0.99 &               1.00 &                 1.00 &                 0.86 \\
 LV R                  &               1.00 &               1.00 &                 1.00 &                 0.72 \\
-Thal L                &               0.75 &               0.88 &                 0.50 &                 0.85 \\
+Thal L                &               0.75 &               0.88 &                 \textit{0.50} &                 0.85 \\
 Thal R                &               0.88 &               0.84 &                 0.73 &                 0.82 \\
 cWMV                  &               0.99 &               1.00 &                 0.99 &                 0.98 \\
 scGMV                 &               0.98 &               0.96 &                 0.98 &                 0.93 \\
