--- a/begin_table_centering_begin_tabular__1.tex
+++ b/begin_table_centering_begin_tabular__1.tex
@@ -1,32 +1,42 @@
 \begin{table}
 []
 \centering
-\begin{tabular}{lllllllllll}
+\begin{tabular}{llllll}
 \toprule
-{} &     1  &     2  &     3  &     4  &                    5  &     6  &                    7  &     8  &     9  &     10 \\
-%\midrule
-%Location & ams & bas & bas & bas & bcn & ber & bwh & bwh & hvn & leu\\
+{} & ams & osl &              7 & 8 &        9 \\
 \midrule
-TR (ms)                            &      8 &   2080 &   2300 &   2300 &                  1800 &   1900 &                     8 &   2300 &   2000 &      8 \\
-TE (ms)                           &    3.2 &    3.1 &      3 &      3 &                     3 &      3 &                   3.9 &      3 &    3.2 &    3.8 \\
-Strength (T)                      &      3 &    1.5 &      3 &      3 &                     3 &      3 &                   1.5 &      3 &      3 &      3 \\
-TI (ms)                           &    450 &   1100 &    900 &    900 &                   900 &    900 &                   300 &    900 &    900 &      - \\
-FlipAngle ($^{\circ}$)                     &     12 &     15 &      9 &      9 &                     9 &      9 &                    20 &      9 &      8 &      8 \\
-Make                          &     GE &     Si &     Si &     Si &                    Si &     Si &                    GE &     Si &     Si &     Ph \\
-Voxel Size (mm)                   &  1,1,1 &  1,1,1 &  1,1,1 &  1,1,1 &  .86,.86,.86 &  1,1,1 &  .94,.94,1.2 &  1,1,1 &  1,1,1 &  1,1,1 \\
-\bottomrule
-LV             &      1 &   0.79 &      1 &      1 &                     1 &      1 &                     1 &      1 &      1 &      1 \\
-cWMV        &      1 &   0.98 &      1 &      1 &                     1 &   0.99 &                  0.99 &      1 &   0.97 &      1 \\
-cVol                   &   0.99 &   0.95 &   0.99 &   0.99 &                     1 &   0.96 &                  0.95 &      1 &   0.96 &   0.99 \\
-scGMV                &   0.98 &   0.93 &   0.96 &   0.99 &                  0.98 &   0.98 &                  0.98 &   0.98 &   0.99 &   0.98 \\
-GMV                  &      1 &   0.98 &   0.99 &      1 &                     1 &   0.97 &                  0.96 &      1 &   0.97 &   0.99 \\
-eTIV &      1 &   0.97 &      1 &   0.84 &                     1 &   0.84 &                     1 &      1 &   0.97 &   0.99 \\
-Caud                       &   0.97 &   0.97 &   0.99 &   0.99 &                  0.97 &   0.98 &                  0.98 &   0.99 &   0.98 &   0.97 \\
-Amyg                      &   0.91 &   0.93 &   0.88 &   0.97 &                  0.96 &   0.88 &                  0.96 &   0.92 &   0.92 &   0.94 \\
-Hipp                   &   0.83 &   0.87 &   0.95 &   0.98 &                  0.97 &   0.96 &                  0.98 &   0.98 &   0.98 &   0.96 \\
-Thal               &   0.93 &   0.87 &   0.93 &   0.92 &                  0.87 &   0.87 &                  0.87 &   0.95 &   0.95 &   0.93 \\
+TR                    &                   8.21 &               7.80 &                                  9 &               8.21 &                        6.99 \\
+TE                    &                   3.22 &               2.90 &                               4.00 &               3.81 &                        3.16 \\
+Strength              &                      3 &                  3 &                                  3 &                  3 &                           3 \\
+TI                    &                    450 &                450 &                                  0 &                  0 &                         900 \\
+FlipAngle             &                     12 &                 12 &                                  8 &                  8 &                           9 \\
+Make                  &                     GE &                 GE &                                 Ph &                 Ph &                          Ph \\
+Voxel Size            &                  1x1x1 &              1x1x1 &                              1x1x1 &              1x1x1 &                       1x1x1 \\
+Distortion Correction &                      0 &                  0 &                                  Y &                  0 &                           Y \\
+Parallel Imaging      &                      0 &                  0 &                      2(RL) 1.5(AP) &                  0 &                           - \\
+FOV                   &                      0 &                  0 &  240-240-170 (FH-AP-RL), all in mm &                  0 &  FH = 256, AP = 256, RL=204 \\
+Read Out Direction    &                      0 &                  0 &                                 AP &                  0 &                          FH \\
+Head coil \# channels  &                      0 &                  0 &                                 16 &                  0 &                           8 \\
+Model                 &              Discovery &         Signa HDxt &                            Achieva &            Achieva &                      Intera \\
+OS                    &                      0 &                  0 &                            3.2.3.2 &                  0 &                       3.2.3 \\
+Acq. Time (min)       &               00:00:00 &           00:00:00 &                           05:55 &           00:00:00 &                    08:30 \\
+orientation           &                      0 &                  0 &                                sag &                  0 &                         sag \\
+Amyg L                &                   1.00 &               0.89 &                               0.40 &               0.87 &                        0.97 \\
+Amyg R                &                   1.00 &               0.81 &                               0.96 &               0.94 &                        0.96 \\
+Caud L                &                   1.00 &               0.98 &                               0.99 &               0.98 &                        0.99 \\
+Caud R                &                   0.74 &               0.97 &                               0.98 &               0.97 &                        0.96 \\
+GMV                   &                   0.51 &               1.00 &                               0.99 &               0.99 &                        1.00 \\
+Hipp L                &                   1.00 &               0.97 &                               0.77 &               0.90 &                        0.99 \\
+Hipp R                &                   0.67 &               0.96 &                               0.97 &               0.96 &                        0.98 \\
+LV L                  &                   0.83 &               1.00 &                               1.00 &               1.00 &                        1.00 \\
+LV R                  &                   0.96 &               1.00 &                               1.00 &               1.00 &                        1.00 \\
+Thal L                &                   0.95 &               0.76 &                               0.94 &               0.78 &                        0.89 \\
+Thal R                &                   0.97 &               0.88 &                               0.97 &               0.97 &                        0.97 \\
+cWMV                  &                   1.00 &               0.99 &                               1.00 &               1.00 &                        1.00 \\
+scGMV                 &                   0.90 &               0.99 &                               0.96 &               0.99 &                        0.99 \\
 \bottomrule
 \end{tabular}
+
 \caption{Top: Acquisition parameters for the first 10 out of 20 scanners. Si = Siemens, Ph = Philips, GE= General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
 \label{tab:acquisition1}
 
