--- a/begin_table_centering_begin_tabular__1.tex
+++ b/begin_table_centering_begin_tabular__1.tex
@@ -21,6 +21,7 @@ Model                 &              Discovery &         Signa HDxt &           
 OS                    &                      0 &                  0 &                            3.2.3.2 &                  0 &                       3.2.3 \\
 Acq. Time (min)       &               00:00:00 &           00:00:00 &                           05:55 &           00:00:00 &                    08:30 \\
 orientation           &                      0 &                  0 &                                sag &                  0 &                         sag \\
+\midrule
 Amyg L                &                   1.00 &               0.89 &                               0.40 &               0.87 &                        0.97 \\
 Amyg R                &                   1.00 &               0.81 &                               0.96 &               0.94 &                        0.96 \\
 Caud L                &                   1.00 &               0.98 &                               0.99 &               0.98 &                        0.99 \\
