--- a/begin_table_centering_begin_tabular__2.tex
+++ b/begin_table_centering_begin_tabular__2.tex
@@ -1,30 +1,40 @@
 \begin{table}
 []
 \centering
-\begin{tabular}{lllllllllll}
+\begin{tabular}{lllllll}
 \toprule
-{} &     1  &     2  &     3  &     4  &                    5  &     6  &                    7  &     8  &     9  &     10 \\
-%\midrule
-%Location & ams & bas & bas & bas & bcn & ber & bwh & bwh & hvn & leu\\
+{} & 10 & 11 & 12 & 13 & 14 & hvn \\
 \midrule
-TR (ms)                            &      8 &   2080 &   2300 &   2300 &                  1800 &   1900 &                     8 &   2300 &   2000 &      8 \\
-TE (ms)                           &    3.2 &    3.1 &      3 &      3 &                     3 &      3 &                   3.9 &      3 &    3.2 &    3.8 \\
-Strength (T)                      &      3 &    1.5 &      3 &      3 &                     3 &      3 &                   1.5 &      3 &      3 &      3 \\
-TI (ms)                           &    450 &   1100 &    900 &    900 &                   900 &    900 &                   300 &    900 &    900 &      - \\
-FlipAngle ($^{\circ}$)                     &     12 &     15 &      9 &      9 &                     9 &      9 &                    20 &      9 &      8 &      8 \\
-Make                          &     GE &     Si &     Si &     Si &                    Si &     Si &                    GE &     Si &     Si &     Ph \\
-Voxel Size (mm)                   &  1,1,1 &  1,1,1 &  1,1,1 &  1,1,1 &  .86,.86,.86 &  1,1,1 &  .94,.94,1.2 &  1,1,1 &  1,1,1 &  1,1,1 \\
-\bottomrule
-LV             &      1 &   0.79 &      1 &      1 &                     1 &      1 &                     1 &      1 &      1 &      1 \\
-cWMV        &      1 &   0.98 &      1 &      1 &                     1 &   0.99 &                  0.99 &      1 &   0.97 &      1 \\
-cVol                   &   0.99 &   0.95 &   0.99 &   0.99 &                     1 &   0.96 &                  0.95 &      1 &   0.96 &   0.99 \\
-scGMV                &   0.98 &   0.93 &   0.96 &   0.99 &                  0.98 &   0.98 &                  0.98 &   0.98 &   0.99 &   0.98 \\
-GMV                  &      1 &   0.98 &   0.99 &      1 &                     1 &   0.97 &                  0.96 &      1 &   0.97 &   0.99 \\
-eTIV &      1 &   0.97 &      1 &   0.84 &                     1 &   0.84 &                     1 &      1 &   0.97 &   0.99 \\
-Caud                       &   0.97 &   0.97 &   0.99 &   0.99 &                  0.97 &   0.98 &                  0.98 &   0.99 &   0.98 &   0.97 \\
-Amyg                      &   0.91 &   0.93 &   0.88 &   0.97 &                  0.96 &   0.88 &                  0.96 &   0.92 &   0.92 &   0.94 \\
-Hipp                   &   0.83 &   0.87 &   0.95 &   0.98 &                  0.97 &   0.96 &                  0.98 &   0.98 &   0.98 &   0.96 \\
-Thal               &   0.93 &   0.87 &   0.93 &   0.92 &                  0.87 &   0.87 &                  0.87 &   0.95 &   0.95 &   0.93 \\
+TR                    &                 2300 &                 2300 &               2300 &                2300 &                2300 &                2000 \\
+TE                    &                 2.96 &                 2.98 &               2.98 &                2.96 &                2.96 &                3.22 \\
+Strength              &                    3 &                    3 &                  3 &                   3 &                   3 &                   3 \\
+TI                    &                  900 &                  900 &                900 &                 900 &                 900 &                 900 \\
+FlipAngle             &                    9 &                    9 &                  9 &                   9 &                   9 &                   8 \\
+Make                  &                   Si &                   Si &                 Si &                  Si &                  Si &                  Si \\
+Voxel Size            &                1x1x1 &              1x1x1.1 &              1x1x1 &               1x1x1 &               1x1x1 &               1x1x1 \\
+Distortion Correction &                    Y &                    N &                  N &                   Y &                   Y &                   0 \\
+Parallel Imaging      &                    2 &                    - &                  2 &                   2 &                   2 &                   0 \\
+FOV                   &              256x256 &                250mm &              256mm &        24 x 25.6 cm &             256x256 &                   0 \\
+Read Out Direction    &                   HF &                    0 &                 AP &                  SI &                  HF &                   0 \\
+Head coil \# channels  &                   20 &                    0 &                 20 &                  20 &                  20 &                   0 \\
+Model                 &               Prisma &           Prisma fit &              Skyra &               Skyra &               Skyra &               Skyra \\
+OS                    &                 D13D &        syngo MR D13D &       syngo MR D13 &                 D13 &          D13C (SP2) &                   0 \\
+Acq. Time (min)       &             05:09 &             07:46 &           05:12 &            05:12 &            05:09 &            00:00:00 \\
+orientation           &                  sag &                  sag &                sag &                 sag &                 sag &                   0 \\
+\midrule
+Amyg L                &                 0.84 &                 0.86 &               0.78 &                0.85 &                0.98 &                0.89 \\
+Amyg R                &                 0.93 &                 0.90 &               0.91 &                0.86 &                0.93 &                0.84 \\
+Caud L                &                 0.99 &                 0.99 &               0.99 &                0.99 &                0.99 &                0.98 \\
+Caud R                &                 0.99 &                 0.96 &               0.93 &                0.96 &                0.98 &                0.97 \\
+GMV                   &                 0.99 &                 0.98 &               0.98 &                1.00 &                1.00 &                0.97 \\
+Hipp L                &                 0.94 &                 0.98 &               0.98 &                0.97 &                0.97 &                0.98 \\
+Hipp R                &                 0.93 &                 0.95 &               0.97 &                0.99 &                0.96 &                0.96 \\
+LV L                  &                 1.00 &                 1.00 &               1.00 &                1.00 &                1.00 &                1.00 \\
+LV R                  &                 1.00 &                 1.00 &               1.00 &                1.00 &                1.00 &                1.00 \\
+Thal L                &                 0.94 &                 0.87 &               0.84 &                0.81 &                0.89 &                0.89 \\
+Thal R                &                 0.84 &                 0.93 &               0.86 &                0.91 &                0.92 &                0.89 \\
+cWMV                  &                 1.00 &                 1.00 &               1.00 &                1.00 &                1.00 &                0.97 \\
+scGMV                 &                 0.97 &                 0.99 &               0.99 &                0.98 &                0.99 &                0.99 \\
 \bottomrule
 \end{tabular}
 \caption{Top: Acquisition parameters for the first 10 out of 20 scanners. Si = Siemens, Ph = Philips, GE= General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
