--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -3,7 +3,7 @@
 \centering
 \begin{tabular}{llllll}
 \toprule
-{} & vdb-si-trio-mprage & mia-si-trio-mprage & ber-si-trio-mprage &                   mnz-si-trio-mprage & bcn-si-trio-mprage \\
+{} & 16 & ber &                   18 & 19 \\
 \midrule
 TR                    &               2300 &               2150 &               1900 &                                 1900 &               1800 \\
 TE                    &               2.98 &               3.40 &               3.03 &                                 2.52 &               3.01 \\
