--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -3,7 +3,7 @@
 \centering
 \begin{tabular}{llllll}
 \toprule
-{} & 16 & ber &                   18 & 19 & 20\\
+{} & 16 & 17 &                   ber & 19 & 20\\
 \midrule
 TR                    &               2300 &               2150 &               1900 &                                 1900 &               1800 \\
 TE                    &               2.98 &               3.40 &               3.03 &                                 2.52 &               3.01 \\
