--- a/begin_table_centering_begin_tabular__1.tex
+++ b/begin_table_centering_begin_tabular__1.tex
@@ -14,7 +14,7 @@ Make                  &                     GE &                 GE &           
 Voxel Size            &                  1x1x1 &              1x1x1 &                              1x1x1 &              1x1x1 &                       1x1x1 \\
 Distortion Correction &                      0 &                  0 &                                  Y &                  0 &                           Y \\
 Parallel Imaging      &                      0 &                  0 &                      2(RL) 1.5(AP) &                  0 &                           - \\
-FOV                   &                      0 &                  0 &  240-240-170 (FH-AP-RL), all in mm &                  0 &  FH = 256, AP = 256, RL=204 \\
+FOV                   &                      0 &                  0 &  240-240-170 (FH-AP-RL) &                  0 &  256,256,204(FH-AP-RL) \\
 Read Out Direction    &                      0 &                  0 &                                 AP &                  0 &                          FH \\
 Head coil \# channels  &                      0 &                  0 &                                 16 &                  0 &                           8 \\
 Model                 &              Discovery &         Signa HDxt &                            Achieva &            Achieva &                      Intera \\
