--- a/title.tex
+++ b/title.tex
@@ -1,1 +1,1 @@
-Direct Calibration of MRI T1-weighted Regional Volumes and the Effect on Power for Multisite Studies
+Power Estimation for Non-Standardized Multisite Studies using Direct Calibration
