--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,3 @@
 %using healthy control data to help us power a study of a disease
 
-A concern for researchers planning multisite studies is that scanner and T1 weighted sequence-related biases on regional volumes could overshadow true effects, especially for studies with a heterogeneous set of scanners and sequences. In contrast to current approaches that perform extensive steps including standardized hardware, pulse sequences, protocols and phantom based corrections to ensure same raw image intensities, we propose to directly calibrate the regional volumes based on the observed values in the brains of healthy controls. We hypothesized that the bias of estimated regional volumes is scaled between sites due to the contrast and gradient distortion differences between scanners and sequences. Given this assumption, we provide a new statistical framework and derived a power equation to define inclusion criteria for a set of sites based on the variability of their scaling factors. We estimated the scaling factors of 20 scanners with heterogeneous hardware and sequence parameters by scanning a single set of 12 subjects at sites across the United States and Europe. Regional volumes and their scaling factors were estimated for each site using Freesurfer's segmentation algorithm and ordinary least squares, respectively. The scaling factors were validated by comparing the theoretical and simulated power curves, performing a leave-one-out calibration of regional volumes, and evaluating the absolute agreement of all regional volumes between sites before and after calibration. Using our derived power equation, we were able to define the conditions where calibration (via human and nonhuman phantoms) could be avoided for 80\% power. This could enables informed choice of processing pipelines and outcome metrics based on their scaling factor variability across sites. For researchers planning multisite studies, these guidelines may be useful, and the ease of application enables more collaborations across clinical and research institutions.
+A concern for researchers planning multisite studies is that scanner and T1 weighted sequence-related biases on regional volumes could overshadow true effects, especially for studies with a heterogeneous set of scanners and sequences. In contrast to current approaches that perform extensive steps including standardized hardware, pulse sequences, protocols and phantom based corrections to ensure the same raw image intensities, we propose to avoid calibration entirely.  We hypothesized that the bias of estimated regional volumes is scaled between sites due to the contrast and gradient distortion differences between scanners and sequences. Given this assumption, we provide a new statistical framework and derived a power equation to define inclusion criteria for a set of sites based on the variability of their scaling factors. We estimated the scaling factors of 20 scanners with heterogeneous hardware and sequence parameters by scanning a single set of 12 subjects at sites across the United States and Europe. Regional volumes and their scaling factors were estimated for each site using Freesurfer's segmentation algorithm and ordinary least squares, respectively. The scaling factors were validated by comparing the theoretical and simulated power curves, performing a leave-one-out calibration of regional volumes, and evaluating the absolute agreement of all regional volumes between sites before and after calibration. Using our derived power equation, we were able to define the conditions where calibration (via human or nonhuman phantoms) could be avoided for 80\% power. This could enable informed choice of processing pipelines and outcome metrics based on their scaling factor variability across sites. For researchers planning multisite studies, these guidelines may be useful, and the ease of application enables more collaborations across clinical and research institutions.
