--- a/begin_table_begin_tabular_c__.tex
+++ b/begin_table_begin_tabular_c__.tex
@@ -1,6 +1,6 @@
 \begin{table} 
     \begin{tabular}{ c c c c }
-        ROI & ICC BW & ICC BW Cal & Cannon \cite{cannon2014} ICC BW \\ 
+        ROI & ICC BW & ICC BW Cal & cite{cannon2014} ICC BW \\ 
         GMV & .78 & .96 & .854 \\ 
         WMV & .96 & .98 & .774 \\ 
         Thal & .61 & .73 & .95 \\ 
