--- a/begin_table_begin_tabular_c__.tex
+++ b/begin_table_begin_tabular_c__.tex
@@ -1,12 +1,14 @@
 \begin{table} 
     \begin{tabular}{ c c c c }
         ROI & ICC BW & ICC BW Cal & cite{cannon2014} ICC BW \\ 
+        \midrule
         GMV & .78 & .96 & .854 \\ 
         WMV & .96 & .98 & .774 \\ 
         Thal & .61 & .73 & .95 \\ 
         Hipp & .75 & .84 & .79 \\ 
         Amyg & .57 & .75 & .76 \\ 
         Caud & .82 & .91 & .92 \\ 
+        \bottomrule
     \end{tabular} 
     \caption{Between-site ICC comparison to the study by \cite{cannon2014}, where MRI sequences were standardized and subcortical segmentation was performed using FIRST, and cortical segmentation using cortical pattern matching. ICC BW and ICC BW Cal were calculated using our multisite healthy control data, where ICC BW Cal was calculated as the between site ICC of volumes after applying the scaling factor from a leave-one-out calibration. Other than the thalamus (Thal), we found that the between-site ICCs were comparable to \cite{cannon2014} for the amygdala (Amyg), caudate (Caud), and even higher for the hippocampus (Hipp), gray matter volume (GMV) and white matter volume (WMV)} 
 \label{comparetocannon}
