--- a/begin_table_begin_tabular_c__1.tex
+++ b/begin_table_begin_tabular_c__1.tex
@@ -1,11 +1,13 @@
 \begin{table} 
     \begin{tabular}{ c c c c }
         ROI & ICC WI & ICC WI Cal & \cite{jovicich2013brain} ICC WI Average \\ 
+        \midrule
         LV & 1 & 1 & $.998 \pm 0.002$ \\ 
         Thal & .86 & .84 & $0.765 \pm .183$ \\ 
         Hipp & .93 & .93 & $0.878 \pm .132$ \\ 
         Amyg & .89 & .86 & $0.761 \pm .134$ \\ 
         Caud & .97 & .97 & $0.909 \pm 0.092$ \\ 
+        \bottomrule
     \end{tabular} 
     \caption{Comparing the within-site ICC before and after leave-one-out scaling factor calibration with the cross-sectional freesurfer results of \cite{jovicich2013brain}, where scanners were standardized, and the average within-site ICC is shown. The within-site ICCs of our study fall within the range of \cite{jovicich2013brain}, which shows the that sites in this study are as reliable as those in \cite{jovicich2013brain}.} 
 \end{table}
