--- a/title.tex
+++ b/title.tex
@@ -1,1 +1,1 @@
-Power Estimation for Non-Standardized Multisite Studies without Calibration
+Power Estimation for Non-Standardized Multisite Studies
