--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -585,3 +585,14 @@
   year={2004},
   publisher={Elsevier}
 }
+
+@article{fennema2007feasibility,
+  title={Feasibility of multi-site clinical structural neuroimaging studies of aging using legacy data},
+  author={Fennema-Notestine, Christine and Gamst, Anthony C and Quinn, Brian T and Pacheco, Jenni and Jernigan, Terry L and Thal, Leon and Buckner, Randy and Killiany, Ron and Blacker, Deborah and Dale, Anders M and others},
+  journal={Neuroinformatics},
+  volume={5},
+  number={4},
+  pages={235--245},
+  year={2007},
+  publisher={Springer}
+}
