--- a/The_scaling_factors_.tex
+++ b/The_scaling_factors_.tex
@@ -1,1 +1,1 @@
-The scaling factors were also validated by calibrating the regional volumes of each site in a leave-one-out cross-validation. The calibrated volume for a particular subject $i$ and site $j$ was scaled by the scaling factor estimated from all subjects excluding subject $i$. Within- and between-site ICC's were calculated for the calibrated volumes. If the scaling factor estimates were inaccurate, the between-site ICCs of calibrated regional volumes would be worse than the between-site ICCs of the original regional volumes.
+The scaling factors were also validated by calibrating the regional volumes of each site in a leave-one-out cross-validation. The calibrated volume for a particular subject $i$ and site $j$ was scaled by the scaling factor estimated from all subjects excluding subject $i$. Within- and between-site ICC's were calculated for the calibrated volumes. If the scaling factor estimates were inaccurate, the between-site ICCs of calibrated regional volumes would be worse than the between-site ICCs of the original regional volumes. Additionally, the between-site ICC's after calibration should be similar to those found for harmonized studies, such as \cite{cannon2014}.
