--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -3,38 +3,37 @@
 \centering
 \begin{tabular}{lllll}
 \toprule
-{} & 1 & nov & 3 & 4 \\
+{} & bwh-ge-signa-fspgr & nov-ph-achieva-t1w & vdb-si-avanto-mprage & bas-si-avanto-mprage \\
 \midrule
 TR                    &               8.18 &               7.10 &                 2130 &                 2080 \\
 TE                    &               3.86 &               3.20 &                 2.94 &                 3.10 \\
 Strength              &               1.50 &               1.50 &                 1.50 &                 1.50 \\
 TI                    &                300 &             862.90 &                 1100 &                 1100 \\
-FlipAngle             &                 20 &                  8 &                   15 &                   15 \\
+Flip Angle            &                 20 &                  8 &                   15 &                   15 \\
 Make                  &                 GE &                 Ph &                   Si &                   Si \\
-Voxel Size            &        .94x.94x1.2 &              1x1x1 &                1x1x1 &                1x1x1 \\
-Distortion Correction &                  N &                  0 &                    N &                    Y \\
-Parallel Imaging      &                  - &                  0 &            GRAPPA, 2 &                    - \\
-FOV                   &      24 cm x 24 cm &                  0 &              256x256 &              250x250 \\
-Read Out Direction    &                 SI &                  0 &                   HF &                   HF \\
-Head coil \# channels  &                  0 &                  0 &                   20 &                   12 \\
+Voxel Size            &        .94x.94x1.2 &              1x1x1 &                1x1x1 &            .97x.97x1 \\
+Distortion Correction &                  N &                  N &                    N &                    Y \\
+Parallel Imaging      &                  - &                  2 &                    2 &                    - \\
+FOV                   &        240x240x200 &        256x256x160 &          256x256x176 &          234x250x160 \\
+Read Out Direction    &                 HF &                 AP &                   HF &                   HF \\
+Head coil \# channels  &                  1 &                  8 &                   20 &                   12 \\
 Model                 &           Signa LX &            Achieva &               Avanto &               Avanto \\
-OS                    &                11x &                  0 &               MRD13B &                 B17A \\
-Acq. Time (min)       &           06:24 &           00:00:00 &             04:58 &             08:56 \\
-orientation           &                sag &                  0 &                  sag &                  sag \\
-\midrule
-Amyg L                &               0.92 &               0.90 &                 \textit{0.65} &                 0.94 \\
-Amyg R                &               0.90 &               0.90 &                 0.83 &                 0.90 \\
-Caud L                &               0.95 &               0.95 &                 0.98 &                 0.97 \\
-Caud R                &               0.98 &               0.97 &                 0.95 &                 0.85 \\
-GMV                   &               0.96 &               0.99 &                 0.98 &                 0.98 \\
-Hipp L                &               0.93 &               0.95 &                 0.89 &                 0.85 \\
-Hipp R                &               0.89 &               0.93 &                 0.95 &                 0.89 \\
-LV L                  &               0.99 &               1.00 &                 1.00 &                 0.86 \\
-LV R                  &               1.00 &               1.00 &                 1.00 &                 0.72 \\
-Thal L                &               0.75 &               0.88 &                 \textit{0.50} &                 0.85 \\
-Thal R                &               0.88 &               0.84 &                 0.73 &                 0.82 \\
-cWMV                  &               0.99 &               1.00 &                 0.99 &                 0.98 \\
-scGMV                 &               0.98 &               0.96 &                 0.98 &                 0.93 \\
+OS                    &                11x &               2.50 &                VD13B &                 B17A \\
+Acq. Time (min)       &           06:24:00 &           05:34:00 &             04:58:00 &             08:56:00 \\
+orientation           &                sag &                sag &                  sag &                  sag \\
+Amyg (L)              &               0.93 &               0.89 &                 0.61 &                 0.96 \\
+Amyg (R)              &               0.93 &               0.90 &                 0.83 &                 0.88 \\
+Caud (L)              &               0.96 &               0.96 &                 0.98 &                 0.99 \\
+Caud (R)              &               0.96 &               0.97 &                 0.90 &                 0.96 \\
+GMV                   &               0.96 &               0.99 &                 0.98 &                 0.99 \\
+Hipp (L)              &               0.94 &               0.95 &                 0.89 &                 0.93 \\
+Hipp (R)              &               0.93 &               0.91 &                 0.94 &                 0.95 \\
+Thal (L)              &               0.77 &               0.93 &                 0.59 &                 0.82 \\
+Thal (R)              &               0.91 &               0.90 &                 0.76 &                 0.82 \\
+cVol                  &               0.95 &               0.99 &                 0.97 &                 0.99 \\
+cWMV                  &               0.99 &               1.00 &                 0.99 &                 0.99 \\
+eTIV                  &               1.00 &               1.00 &                 1.00 &                 1.00 \\
+scGMV                 &               0.98 &               0.97 &                 0.98 &                 0.93 \\
 \bottomrule
 \end{tabular}
 \caption{Top: Acquisition parameters for the first 10 out of 20 scanners. Si = Siemens, Ph = Philips, GE= General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
