--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -3,7 +3,7 @@
 \centering
 \begin{tabular}{lllll}
 \toprule
-{} & bwh-ge-signa-fspgr & nov-ph-achieva-t1w & vdb-si-avanto-mprage & bas-si-avanto-mprage \\
+{} & 1 & 2 & 3 & 4 \\
 \midrule
 TR                    &               8.18 &               7.10 &                 2130 &                 2080 \\
 TE                    &               3.86 &               3.20 &                 2.94 &                 3.10 \\
@@ -19,21 +19,21 @@ Read Out Direction    &                 HF &                 AP &               
 Head coil \# channels  &                  1 &                  8 &                   20 &                   12 \\
 Model                 &           Signa LX &            Achieva &               Avanto &               Avanto \\
 OS                    &                11x &               2.50 &                VD13B &                 B17A \\
-Acq. Time (min)       &           06:24:00 &           05:34:00 &             04:58:00 &             08:56:00 \\
+Acq. Time (min)       &           06:24 &           05:34 &             04:58 &             08:56 \\
 orientation           &                sag &                sag &                  sag &                  sag \\
-Amyg (L)              &               0.93 &               0.89 &                 0.61 &                 0.96 \\
-Amyg (R)              &               0.93 &               0.90 &                 0.83 &                 0.88 \\
-Caud (L)              &               0.96 &               0.96 &                 0.98 &                 0.99 \\
-Caud (R)              &               0.96 &               0.97 &                 0.90 &                 0.96 \\
-GMV                   &               0.96 &               0.99 &                 0.98 &                 0.99 \\
-Hipp (L)              &               0.94 &               0.95 &                 0.89 &                 0.93 \\
-Hipp (R)              &               0.93 &               0.91 &                 0.94 &                 0.95 \\
-Thal (L)              &               0.77 &               0.93 &                 0.59 &                 0.82 \\
-Thal (R)              &               0.91 &               0.90 &                 0.76 &                 0.82 \\
-cVol                  &               0.95 &               0.99 &                 0.97 &                 0.99 \\
-cWMV                  &               0.99 &               1.00 &                 0.99 &                 0.99 \\
-eTIV                  &               1.00 &               1.00 &                 1.00 &                 1.00 \\
-scGMV                 &               0.98 &               0.97 &                 0.98 &                 0.93 \\
+Amyg (L)              &               .93 &               .89 &                 .61 &                 .96 \\
+Amyg (R)              &               .93 &               .90 &                 .83 &                 .88 \\
+Caud (L)              &               .96 &               .96 &                 .98 &                 .99 \\
+Caud (R)              &               .96 &               .97 &                 .90 &                 .96 \\
+GMV                   &               .96 &               .99 &                 .98 &                 .99 \\
+Hipp (L)              &               .94 &               .95 &                 .89 &                 .93 \\
+Hipp (R)              &               .93 &               .91 &                 .94 &                 .95 \\
+Thal (L)              &               .77 &               .93 &                 .59 &                 .82 \\
+Thal (R)              &               .91 &               .90 &                 .76 &                 .82 \\
+cVol                  &               .95 &               .99 &                 .97 &                 .99 \\
+cWMV                  &               .99 &               1 &                 .99 &                 .99 \\
+eTIV                  &               1 &               1 &                 1 &                 1 \\
+scGMV                 &               .98 &               .97 &                 .98 &                 .93 \\
 \bottomrule
 \end{tabular}
 \caption{Top: Acquisition parameters for the first 10 out of 20 scanners. Si = Siemens, Ph = Philips, GE= General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
